MarkdownToHtml command: template style enhanced

--- a/src/EA4T.SteadyBear.Packaging/Resources/MarkdownToHtml.html
+++ b/src/EA4T.SteadyBear.Packaging/Resources/MarkdownToHtml.html
@@ -39,6 +39,7 @@
     
     article { margin:0; padding: 10px 20px; }
     header, footer { margin:0; padding: 10px 20px; background: #2D2D2D; }
+    footer { font-size: .7em; }
     .HelpCenter { background: #3F3F3F; }
     .HelpCenterContent { margin:0 auto 0 auto; max-width: 80em; background: #3F3F3F; border: solid #303030 ; border-width: 0 1px; }
 
