option `--copyright` can be used as a copyright notice in the template

--- a/src/Airudit.MdBook.Core/res/default.dark.html
+++ b/src/Airudit.MdBook.Core/res/default.dark.html
@@ -86,7 +86,7 @@
             <p>{{{Info}}} This document is printable; but think before printing. Adjust print settings (duplex, ink economy) to reduce paper and ink consumption. </p>
         </div>
         <div class="contents copyright">
-            <p>© Airudit (EA4T), tous droits réservés</p>
+            <p>{{{Copyright}}}</p>
         </div>
     </footer>
 </body>
